welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:9: error: '<-' expected but ')' found.
		for (compteur<2) do {
                               ^Poucet:15: error: illegal start of simple expression
	}
        ^Poucet:16: error: 'while' expected but '}' found.
}
^